--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 -----------------------------*/
 .card{
     display: block;
-    width: 850px;
+    width: 90%;
     height: 512px;
     margin: 0 auto;
     margin-top: 40px;
@@ -34,7 +34,7 @@ body {
 }
 
 .question{
-    width: 700px;
+    width: 100%;
     height: 50px;
     padding: 0 17px;
     background: #FFFFFF 0% 0% no-repeat padding-box;
@@ -44,7 +44,7 @@ body {
 }
 
 .kaito{
-    width: 700px;
+    width: 100%;
     height: 170px;
     margin-top: 20px;
     padding: 15px 17px;
@@ -60,7 +60,7 @@ body {
 }
 
 .memo{
-    width: 700px;
+    width: 100%;
     height: 110px;
     margin-top: 10px;
     padding: 15px 17px;
@@ -138,4 +138,19 @@ body {
   transform: scale(0.9,0.9);
 }
 
-
+/*-----------------------------
+検索
+-----------------------------*/
+#search_box{
+  display: block;
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 20px;
+  padding: 0 17px;
+  border: 0.5px solid #ded6d0;
+  border-radius: 3px;
+}
+.search_result{
+  width: 90%;
+  margin: 0 auto;
+}
